--- a/SignUpPage/GoogleService-Info.plist
+++ b/SignUpPage/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>999030346370-1o7enh6apufmq8di21n6dn2ouna92kpn.apps.googleusercontent.com</string>
+	<string>564151956344-2bivji7jvf6mhh0ie43p8p0h2et2f4da.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.999030346370-1o7enh6apufmq8di21n6dn2ouna92kpn</string>
+	<string>com.googleusercontent.apps.564151956344-2bivji7jvf6mhh0ie43p8p0h2et2f4da</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAUzMrvfKj1pcLXPYkqdSfqLc92hiN6ri0</string>
+	<string>AIzaSyA-AGkaPHFpA39gpEBv0CTZIV5i9_6k7As</string>
 	<key>GCM_SENDER_ID</key>
-	<string>999030346370</string>
+	<string>564151956344</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>List.SignUpPage</string>
+	<string>wilProject</string>
 	<key>PROJECT_ID</key>
-	<string>ontodo-9e1be</string>
+	<string>wilproject-97b31</string>
 	<key>STORAGE_BUCKET</key>
-	<string>ontodo-9e1be.appspot.com</string>
+	<string>wilproject-97b31.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +29,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:999030346370:ios:934c9eafec0f21f999da9b</string>
+	<string>1:564151956344:ios:2bb93b0432c77acfea8e8d</string>
 	<key>DATABASE_URL</key>
-	<string>https://ontodo-9e1be-default-rtdb.firebaseio.com</string>
+	<string>https://wilproject-97b31-default-rtdb.firebaseio.com</string>
 </dict>
 </plist>
